<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    tools:context=".view.DetailsActivity">

    <ImageView
        android:id="@+id/imgFlag"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imgCountryFlagDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_image_placeholder" />

    <TextView
        android:id="@+id/txtCountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtCountryName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgFlag"
        app:layout_constraintStart_toStartOf="@+id/imgFlag"
        app:layout_constraintTop_toBottomOf="@+id/imgFlag" />

    <TextView
        android:id="@+id/txtCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/txtCases"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCountryName" />

    <TextView
        android:id="@+id/txtDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtDeaths"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtCases"
        app:layout_constraintTop_toBottomOf="@+id/txtCases" />

    <TextView
        android:id="@+id/txtUserRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txtUserRating"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtDeaths"
        app:layout_constraintTop_toBottomOf="@+id/txtDeaths" />

    <TextView
        android:id="@+id/txtCasesNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toEndOf="@+id/txtDeaths"
        app:layout_constraintTop_toTopOf="@+id/txtCases"
        tools:text="XXXXX" />

    <TextView
        android:id="@+id/txtDeathsNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toEndOf="@+id/txtDeaths"
        app:layout_constraintTop_toTopOf="@+id/txtDeaths"
        tools:text="XXXX" />

    <TextView
        android:id="@+id/txtUserRatingNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtUserRating"
        app:layout_constraintStart_toEndOf="@+id/txtUserRating"
        tools:text="X.X" />

    <TextView
        android:id="@+id/txtUserNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txtUserNotes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtUserRating"
        app:layout_constraintTop_toBottomOf="@+id/txtUserRating" />

    <EditText
        android:id="@+id/txtMLUserNotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:gravity="start|top"
        android:hint="@string/txtShowNoteHints"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtUserNotes"
        app:layout_constraintTop_toBottomOf="@+id/txtUserNotes"
        tools:text="@tools:sample/lorem/random" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85130113" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete"
        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />
</androidx.constraintlayout.widget.ConstraintLayout>